[package]
name = "firebirust-demo"
version = "0.1.0"
edition = "2021"
description = "Demo project for firebirust-fb5 driver"

[dependencies]
firebirust = { path = ".." }
dotenv = "0.15"
chrono = "0.4"
chrono-tz = "0.6"
rust_decimal = "1.39"
tokio = { version = "1", features = ["full"] }
